--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,4 +1,10 @@
 ---
+:backends:
+  - yaml
+
+:yaml:
+  :datadir: /etc/puppet/hiera
 
 :hierarchy:
-  - deployments.yaml
+  - "node/%{::fqdn}"
+  - common
