--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -1,1 +1,16 @@
+# Hosts & IPs
+control_node: 'localhost'
+
+
+# Passwords
 keystone::admin_token: "secret_token"
+keystone::roles::admin::password: "admin_pass"
+
+keystone::roles::admin::email: "root@%{hiera('control_node')}"
+
+# Don't change these
+keystone::package_ensure: "latest"
+keystone::public_endpoint: "http://%{hiera('control_node')}:5000"
+keystone::admin_endpoint: "http://%{hiera('control_node')}:35357"
+
+openstacklib::openstackclient::package_ensure: "latest"
