Make the keystone endpoints

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -1,7 +1,6 @@
 # Hosts & IPs
 control_node: 'localhost'
 
-
 # Passwords
 keystone::admin_token: "secret_token"
 keystone::roles::admin::password: "admin_pass"
@@ -10,7 +9,10 @@ keystone::roles::admin::email: "root@%{hiera('control_node')}"
 
 # Don't change these
 keystone::package_ensure: "latest"
-keystone::public_endpoint: "http://%{hiera('control_node')}:5000"
-keystone::admin_endpoint: "http://%{hiera('control_node')}:35357"
+keystone::public_endpoint: "http://%{hiera('control_node')}:5000" &public_endpoint
+keystone::admin_endpoint: "http://%{hiera('control_node')}:35357" &admin_endpoint
+
+keystone::endpoint::public_url: *public_endpoint
+keystone::endpoint::admin_url: *admin_endpoint
 
 openstacklib::openstackclient::package_ensure: "latest"
