--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -2,13 +2,28 @@
 # Hosts & IPs
 control_node: 'localhost'
 
+# Set to true to enable debug mode!
+debug: &debug "false"
+keystone::debug: *debug
+glance::api::debug: *debug
+glance::registry::debug: *debug
+
 # Passwords
 keystone::admin_token: "secret_token"
-keystone::roles::admin::password: "admin_pass"
+keystone::roles::admin::password: &admin_pass "admin_pass"
+glance::api::keystone_password: *admin_pass
+glance::registry::keystone_password: *admin_pass
+glance::db::mysql::password: &db_pass "db_pass"
+glance::db::mysql::user: "glance"
+glance::keystone::auth::password: &service_user_pass "service_user_pass"
 
 keystone::roles::admin::email: "root@%{hiera('control_node')}"
 
-# Don't change these
+# Database stuff
+glance::registry::database_connection: &glance_db_connection "mysql://glance:%{hiera('glance::db::mysql::password')}@%{hiera('control_node')}/glance"
+glance::api::database_connection: *glance_db_connection
+
+# Keystone - Don't change these
 keystone::package_ensure: "latest"
 keystone::public_endpoint: &public_endpoint "http://%{hiera('control_node')}:5000" 
 keystone::admin_endpoint: &admin_endpoint "http://%{hiera('control_node')}:35357" 
