--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -8,6 +8,7 @@ deployments::profile::glance::cirros_version: "0.3.4"
 # Set to true to enable debug mode!
 debug: &debug "false"
 keystone::debug: *debug
+cinder::debug: *debug
 glance::api::debug: *debug
 glance::registry::debug: *debug
 
@@ -17,6 +18,10 @@ keystone::roles::admin::password: &admin_pass "admin_pass"
 glance::keystone::auth::password: &service_user_pass "service_user_pass"
 glance::api::keystone_password: *service_user_pass
 glance::registry::keystone_password: *service_user_pass
+cinder::api::keystone_password: *service_user_pass
+cinder::keystone::auth::password: *service_user_pass
+rabbit_password: &rabbit_password "elmer_fudd"
+cinder::rabbit_password: *rabbit_password
 
 keystone::roles::admin::email: "root@%{hiera('control_node')}"
 
@@ -30,10 +35,20 @@ keystone::database_connection: "mysql://%{hiera('keystone::db::mysql::user')}:%{
 keystone::db::mysql::password: &db_pass "db_pass"
 keystone::db::mysql::user: "keystone"
 keystone::db::mysql::allowed_hosts: *control_node
+cinder::database_connection: "mysql://%{hiera('cinder::db::mysql::user')}:%{hiera('cinder::db::mysql::password')}@%{hiera('control_node')}/cinder"
+cinder::db::mysql::password: &db_pass "db_pass"
+cinder::db::mysql::user: "cinder"
+cinder::db::mysql::allowed_hosts: *control_node
 
 # Package Ensures
+cinder::package_ensure: "latest"
+cinder::volume::package_ensure: "latest"
+cinder::client::package_ensure: "latest"
+cinder::scheduler::package_ensure: "latest"
 keystone::package_ensure: "latest"
 glance::package_ensure: "latest"
+glance::api::package_ensure: "latest"
+glance::registry::package_ensure: "latest"
 
 # Endpoint stuff
 keystone::public_endpoint: &public_endpoint "http://%{hiera('control_node')}:5000" 
@@ -44,5 +59,8 @@ keystone::endpoint::admin_url: *admin_endpoint
 glance::keystone::auth::public_url: &glance_url "http://%{hiera('control_node')}:9292"
 glance::keystone::auth::internal_url: *glance_url
 glance::keystone::auth::admin_url: *glance_url
+cinder::keystone::auth::public_address: "%{hiera('control_node')}"
+cinder::keystone::auth::internal_address: "%{hiera('control_node')}"
+cinder::keystone::auth::admin_address: "%{hiera('control_node')}"
 
 openstacklib::openstackclient::package_ensure: "latest"
