--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -79,14 +79,15 @@ keystone::endpoint::admin_url: *admin_endpoint
 glance::keystone::auth::public_url: &glance_url "http://%{hiera('control_node')}:9292"
 glance::keystone::auth::internal_url: *glance_url
 glance::keystone::auth::admin_url: *glance_url
-cinder::keystone::auth::public_address: "%{hiera('control_node')}"
-cinder::keystone::auth::internal_address: "%{hiera('control_node')}"
-cinder::keystone::auth::admin_address: "%{hiera('control_node')}"
+cinder::keystone::auth::public_url: &cinder_api_url "http://%{hiera('control_node')}:8776"
+cinder::keystone::auth::internal_url: *cinder_api_url
+cinder::keystone::auth::admin_url: *cinder_api_url
 nova::keystone::auth::configure_ec2_endpoint: false
-nova::keystone::auth::internal_address: "%{hiera('control_node')}"
-nova::keystone::auth::public_address: "%{hiera('control_node')}"
-nova::keystone::auth::admin_address: "%{hiera('control_node')}"
-nova::api::auth_host: "%{hiera('control_node')}"
+nova::keystone::auth::internal_url: &nova_api_url "%{hiera('control_node')}:8774/v2"
+nova::keystone::auth::public_url: *nova_api_url
+nova::keystone::auth::admin_url: *nova_api_url
+nova::api::auth_uri: "http://%{hiera('control_node')}:35357/v2"
+nova::api::identity_uri: "http://%{hiera('control_node')}:5000/v2"
 nova::os_region_name: *region_name
 nova::api::resume_guests_state_on_host_boot: true
 nova::api::service_neutron_metadata_proxy: true
