keystone: activate WSGI
Configure Keystone to run in WSGI.

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -127,6 +127,10 @@ horizon::fqdn:
  - "*"
 horizon::compress_offline: false
 
+# Keystone
+keystone::wsgi::apache::ssl: false
+keystone::service_name: 'httpd'
+
 deployments::profile::users::project: "test_project"
 deployments::profile::users::username: "test"
 deployments::profile::users::password: "test"
