--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -12,6 +12,17 @@ cinder::debug: *debug
 glance::api::debug: *debug
 glance::registry::debug: *debug
 nova::debug: *debug
+neutron::debug: *debug
+neutron::agents::l3: *debug
+neutron::agents::dhcp: *debug
+
+# Set to true to enable verbose mode!
+verbose: &verbose "false"
+keystone::verbose: *verbose
+cinder::verbose: *verbose
+glance::api::verbose: *verbose
+glance::registry::verbose: *verbose
+nova::verbose: *verbose
 
 # Passwords & Openrc
 admin_password: &admin_password "admin_pass"
@@ -22,6 +33,7 @@ keystone::admin_token: "secret_token"
 keystone::roles::admin::password: *admin_password
 keystone::roles::admin::admin_tenant: *admin_tenant
 keystone::roles::admin::admin: *admin_user
+keystone::roles::admin::email: "root@%{hiera('control_node')}"
 glance::keystone::auth::password: &service_user_pass "service_user_pass"
 glance::api::keystone_password: *service_user_pass
 glance::registry::keystone_password: *service_user_pass
@@ -29,6 +41,8 @@ cinder::api::keystone_password: *service_user_pass
 cinder::keystone::auth::password: *service_user_pass
 nova::keystone::auth::password: *service_user_pass
 nova::api::admin_password: *service_user_pass
+neutron::server::auth_password: *service_user_pass
+neutron::server::notifications::nova_admin_password: *service_user_pass
 
 # Database stuff
 glance::registry::database_connection: &glance_db_connection "mysql://%{hiera('glance::db::mysql::user')}:%{hiera('glance::db::mysql::password')}@%{hiera('control_node')}/glance"
@@ -48,6 +62,18 @@ nova::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hier
 nova::db::mysql::password: &db_pass "db_pass"
 nova::db::mysql::user: "nova"
 nova::db::mysql::allowed_hosts: *control_node
+neutron::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hiera('neutron::db::mysql::password')}@%{hiera('control_node')}/neutron"
+neutron::db::mysql::password: &db_pass "db_pass"
+neutron::db::mysql::user: "neutron"
+neutron::db::mysql::allowed_hosts: *control_node
+
+# Sync DB: should be true
+sync_db: &sync_db true
+cinder::api::sync_db: *sync_db
+nova::api::sync_db: *sync_db
+neutron::server::sync_db: *sync_db
+keystone::sync_db: *sync_db
+glance::registry::sync_db: *sync_db
 
 # Package Ensures
 cinder::package_ensure: "latest"
@@ -95,12 +121,13 @@ glance::api::auth_uri: *auth_uri
 glance::api::identity_uri: *identity_uri
 glance::registry::auth_uri: *auth_uri
 glance::registry::identity_uri: *identity_uri
+neutron::server::identity_uri: *identity_uri
+
+# Nova stuff
 nova::os_region_name: *region_name
 nova::api::resume_guests_state_on_host_boot: true
 nova::api::service_neutron_metadata_proxy: true
 nova::vncproxy::host: "%{hiera('control_node')}"
-
-keystone::roles::admin::email: "root@%{hiera('control_node')}"
 
 # Rabbit
 rabbitmq::server::node_ip_address: '0.0.0.0'
@@ -134,6 +161,22 @@ deployments::profile::users::password: "test"
 # cinder stuff
 cinder::setup_test_volume::size: 10G
 cinder::setup_test_volume::volume_path: '/var/lib/cinder/volumes'
+
+# neutron stuff
+neutron::allow_overlapping_ips: true
+neutron::core_plugin: 'ml2'
+neutron::service_plugin:
+ - 'router'
+neutron::plugins::ml2:type_drivers:
+ - 'vxlan'
+neutron::plugins::ml2:tenant_network_types:
+ - 'vxlan'
+neutron::plugins::ml2:mechanism_drivers:
+ - 'openvswitch'
+neutron::agents::ml2::ovs:enable_tunneling: true
+neutron::agents::ml2::ovs:local_ip: '127.0.0.1'
+neutron::agents::ml2::ovs:tunnel_types:
+ - 'vxlan'
 
 # openrc stuff
 deployments::profile::openrcs::openrcs:
