--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -13,8 +13,8 @@ glance::api::debug: *debug
 glance::registry::debug: *debug
 nova::debug: *debug
 neutron::debug: *debug
-neutron::agents::l3: *debug
-neutron::agents::dhcp: *debug
+neutron::agents::l3::debug: *debug
+neutron::agents::dhcp::debug: *debug
 
 # Set to true to enable verbose mode!
 verbose: &verbose "false"
@@ -23,6 +23,8 @@ cinder::verbose: *verbose
 glance::api::verbose: *verbose
 glance::registry::verbose: *verbose
 nova::verbose: *verbose
+neutron::agents::l3::verbose: *debug
+neutron::agents::dhcp::verbose: *debug
 
 # Passwords & Openrc
 admin_password: &admin_password "admin_pass"
@@ -62,7 +64,7 @@ nova::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hier
 nova::db::mysql::password: &db_pass "db_pass"
 nova::db::mysql::user: "nova"
 nova::db::mysql::allowed_hosts: *control_node
-neutron::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hiera('neutron::db::mysql::password')}@%{hiera('control_node')}/neutron"
+neutron::server::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hiera('neutron::db::mysql::password')}@%{hiera('control_node')}/neutron"
 neutron::db::mysql::password: &db_pass "db_pass"
 neutron::db::mysql::user: "neutron"
 neutron::db::mysql::allowed_hosts: *control_node
