--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -64,7 +64,7 @@ nova::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hier
 nova::db::mysql::password: &db_pass "db_pass"
 nova::db::mysql::user: "nova"
 nova::db::mysql::allowed_hosts: *control_node
-neutron::server::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hiera('neutron::db::mysql::password')}@%{hiera('control_node')}/neutron"
+neutron::server::database_connection: "mysql://%{hiera('neutron::db::mysql::user')}:%{hiera('neutron::db::mysql::password')}@%{hiera('control_node')}/neutron"
 neutron::db::mysql::password: &db_pass "db_pass"
 neutron::db::mysql::user: "neutron"
 neutron::db::mysql::allowed_hosts: *control_node
