--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -42,6 +42,7 @@ glance::registry::keystone_password: *service_user_pass
 cinder::api::keystone_password: *service_user_pass
 cinder::keystone::auth::password: *service_user_pass
 nova::keystone::auth::password: *service_user_pass
+neutron::keystone::auth::password: *service_user_pass
 nova::api::admin_password: *service_user_pass
 neutron::server::auth_password: *service_user_pass
 neutron::server::notifications::nova_admin_password: *service_user_pass
@@ -170,7 +171,7 @@ rabbitmq::server::port: 5672
 
 # horizon
 horizon::secret_key: 'abcfedghijklmnopqrstuvwxyz1234567890'
-horizon::keystone_url: "http://%{hiera('control_node')}:5000/v2"
+horizon::keystone_url: "http://%{hiera('control_node')}:5000/v2.0"
 horizon::allowed_hosts:
  - "*"
 horizon::compress_offline: false
