--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -1,6 +1,7 @@
 ---
 # Hosts & IPs
-control_node: &control_node 'localhost'
+# CHANGEME
+control_node: &control_node '127.0.0.1'
 
 # Version of CirrOS to install
 deployments::profile::glance::cirros_version: "0.3.4"
@@ -48,24 +49,24 @@ neutron::server::auth_password: *service_user_pass
 neutron::server::notifications::nova_admin_password: *service_user_pass
 
 # Database stuff
-glance::registry::database_connection: &glance_db_connection "mysql://%{hiera('glance::db::mysql::user')}:%{hiera('glance::db::mysql::password')}@%{hiera('control_node')}/glance"
+glance::registry::database_connection: &glance_db_connection "mysql://%{hiera('glance::db::mysql::user')}:%{hiera('glance::db::mysql::password')}@localhost/glance"
 glance::api::database_connection: *glance_db_connection
 glance::db::mysql::password: &db_pass "db_pass"
 glance::db::mysql::user: "glance"
 glance::db::mysql::allowed_hosts: *control_node
-keystone::database_connection: "mysql://%{hiera('keystone::db::mysql::user')}:%{hiera('keystone::db::mysql::password')}@%{hiera('control_node')}/keystone"
+keystone::database_connection: "mysql://%{hiera('keystone::db::mysql::user')}:%{hiera('keystone::db::mysql::password')}@localhost/keystone"
 keystone::db::mysql::password: &db_pass "db_pass"
 keystone::db::mysql::user: "keystone"
 keystone::db::mysql::allowed_hosts: *control_node
-cinder::database_connection: "mysql://%{hiera('cinder::db::mysql::user')}:%{hiera('cinder::db::mysql::password')}@%{hiera('control_node')}/cinder"
+cinder::database_connection: "mysql://%{hiera('cinder::db::mysql::user')}:%{hiera('cinder::db::mysql::password')}@localhost/cinder"
 cinder::db::mysql::password: &db_pass "db_pass"
 cinder::db::mysql::user: "cinder"
 cinder::db::mysql::allowed_hosts: *control_node
-nova::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hiera('nova::db::mysql::password')}@%{hiera('control_node')}/nova"
+nova::db::database_connection: "mysql://%{hiera('nova::db::mysql::user')}:%{hiera('nova::db::mysql::password')}@localhost/nova"
 nova::db::mysql::password: &db_pass "db_pass"
 nova::db::mysql::user: "nova"
 nova::db::mysql::allowed_hosts: *control_node
-neutron::server::database_connection: "mysql://%{hiera('neutron::db::mysql::user')}:%{hiera('neutron::db::mysql::password')}@%{hiera('control_node')}/neutron"
+neutron::server::database_connection: "mysql://%{hiera('neutron::db::mysql::user')}:%{hiera('neutron::db::mysql::password')}@localhost/neutron"
 neutron::db::mysql::password: &db_pass "db_pass"
 neutron::db::mysql::user: "neutron"
 neutron::db::mysql::allowed_hosts: *control_node
