Add setup for neutron networks and subnet

--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -232,7 +232,7 @@ keystone::service_name: 'httpd'
 cinder::setup_test_volume::size: 10G
 cinder::setup_test_volume::volume_path: '/var/lib/cinder/volumes'
 
-# neutron stuff
+# Neutron
 neutron::allow_overlapping_ips: true
 neutron::core_plugin: 'ml2'
 neutron::service_plugin:
@@ -249,6 +249,23 @@ neutron::agents::ml2::ovs::tunnel_types:
  - 'vxlan'
 neutron::service_plugins:
  - 'router'
+neutron_network:
+  Network1:
+    shared: false
+    router_external: true
+    provider_network_type: 'vxlan'
+    ensure: present
+neutron_subnet:
+  Subnet1:
+    gateway_ip: 10.190.0.1
+    network_name: Network1
+    cidr: 10.190.0.0/24
+    allocation_pools:
+      - start=10.190.0.5,end=10.190.0.254
+    enable_dhcp: false
+    dns_nameservers:
+     - 8.8.8.8
+     - 8.8.4.4
 
 # Ceilometer
 ceilometer::metering_secret: "ceilometer_secret"
