--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -41,6 +41,10 @@ keystone::roles::admin::password: *admin_password
 keystone::roles::admin::admin_tenant: *admin_tenant
 keystone::roles::admin::admin: *admin_user
 keystone::roles::admin::email: "root@%{hiera('control_node')}"
+keystone::roles::admin::admin_roles:
+ - 'admin'
+ - 'SwiftOperator'
+ - 'ResellerAdmin'
 glance::keystone::auth::password: &service_user_pass "service_user_pass"
 glance::api::keystone_password: *service_user_pass
 glance::registry::keystone_password: *service_user_pass
@@ -291,7 +295,7 @@ swift::proxy::pipeline:
  - 'proxy-logging'
  - 'proxy-server'
 swift::proxy::keystone::operator_roles: &swift_operator_roles
- - 'Member'
+ - '_member_'
  - 'admin'
  - 'SwiftOperator'
 swift::keystone::auth::operator_roles: *swift_operator_roles
@@ -299,6 +303,27 @@ swift::proxy::proxy_local_net_ip: '127.0.0.1'
 swift::storage::all::storage_local_net_ip: '127.0.0.1'
 swift::storage::all::incoming_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
 swift::storage::all::outcoming_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
+swift_ring_object_devices:
+  '127.0.0.1:6000/1':
+    'zone': 1
+    'weight': 1
+  '127.0.0.1:6000/2':
+    'zone': 1
+    'weight': 1
+swift_ring_container_devices:
+  '127.0.0.1:6001/1':
+    'zone': 1
+    'weight': 1
+  '127.0.0.1:6001/2':
+    'zone': 1
+    'weight': 1
+swift_ring_account_devices:
+  '127.0.0.1:6001/1':
+    'zone': 1
+    'weight': 1
+  '127.0.0.1:6001/2':
+    'zone': 1
+    'weight': 1
 
 # test user & openrc stuff
 deployments::profile::users::project: "test_project"
